# wluma

./: .gitattributes  .gitignore  90-wluma-backlight.rules  Cargo.toml  LICENSE  Makefile  README.md  build.rs  config.toml  flake.nix  justfile  meson.build  wluma.service
.github/ISSUE_TEMPLATE/: bug.yml  feature_request.yml
.github/workflows/: ci.yml
protocol/: meson.build
src/: backlight.rs  channel_ext.rs  config.rs  controller.rs  device_file.rs  main.c  main.rs  vulkan.rs
src/als/: cmd.rs  controller.rs  iio.rs  mod.rs  none.rs  time.rs  webcam.rs
src/brightness/: backlight.rs  controller.rs  ddcutil.rs  mod.rs
src/config/: app.rs  file.rs  mod.rs
src/controller/: controller.rs  data.rs  kalman.rs  mod.rs
src/frame/: mod.rs  none.rs  object.rs  vulkan.rs  wlroots.rs
src/frame/capturer/: mod.rs  none.rs  wayland.rs  wlr_export_dmabuf_unstable_v1.rs  wlroots.rs
src/frame/processor/: mod.rs  vulkan.rs
src/predictor/: controller.rs  data.rs  kalman.rs  luma_only_controller.rs  mod.rs
src/predictor/controller/: adaptive.rs  manual.rs  mod.rs  smart.rs
